Wed May 18 14:52:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_modify_expand): check integer overflow.
	  [ruby-core:75592] [Bug #12390]

Wed May 18 13:11:44 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (match_ary_subseq): get subseq of match array without creating
	  temporary array.

	* re.c (match_ary_aref): get element(s) of match array without creating
	  temporary array.

	* re.c (match_aref): Use match_ary_subseq with handling irregulars.

	* re.c (match_values_at): Use match_ary_aref.

Wed May 18 13:03:07 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_x509cert.c (ossl_x509_verify): X509_verify()
	  family may put errors on 0 return (0 means verification failure).
	  Clear OpenSSL error queue before return to Ruby. Since the queue is
	  thread global, remaining errors in the queue can cause an unexpected
	  error in the next OpenSSL operation.  [ruby-core:48284] [Bug #7215]

	* ext/openssl/ossl_x509crl.c (ossl_x509crl_verify): ditto.

	* ext/openssl/ossl_x509req.c (ossl_x509req_verify): ditto.

	* ext/openssl/ossl_x509store.c (ossl_x509stctx_verify): ditto.

	* ext/openssl/ossl_pkey_dh.c (dh_generate): clear the OpenSSL error
	  queue before re-raising exception.

	* ext/openssl/ossl_pkey_dsa.c (dsa_generate): ditto.

	* ext/openssl/ossl_pkey_rsa.c (rsa_generate): ditto.

	* ext/openssl/ossl_ssl.c (ossl_start_ssl): ditto.

	* test/openssl: check that OpenSSL.errors is empty every time after
	  running a test case.

Wed May 18 12:07:42 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl.c (ossl_clear_error): Extracted from
	  ossl_make_error(). This prints errors in the OpenSSL error queue if
	  OpenSSL.debug is true, and clears the queue.
	  (ossl_make_error): use ossl_clear_error().

	* ext/openssl/ossl.h: add prototype declaration of ossl_make_error().
	  (OSSL_BIO_reset) use ossl_clear_error() to clear the queue. Clearing
	  silently makes debugging difficult.
